--- a/index.html
+++ b/index.html
@@ -18,8 +18,9 @@
 
   <label for="audioSelect">Choose Audio:</label>
   <select id="audioSelect">
-    <option value="MATERIAL/AUDIO1.mp3">Funny Sound</option>
-    <option value="MATERIAL/AUDIO2.mp3">Sound Funny</option>
+    <option value="MATERIAL/AUDIO1.mp3">AUDIO1</option>
+    <option value="MATERIAL/AUDIO2.mp3">AUDIO2</option>
+    <option value="MATERIAL/AUDIO3.mp3">AUDIO3</option>
   </select>
 
   <div class="image-container" id="images">
@@ -34,4 +35,5 @@
   <script src="script.js"></script>
 </body>
 </html>
+
 
